deploy10